--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,103 @@
-.App {
-  text-align: center;
+html,
+body {
+  font-family: 'Playfair Display', garamond, serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.bold {
+  font-weight: 700;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+a {
+  text-decoration: none;
+  color: #333;
 }
 
-.App-title {
-  font-size: 1.5em;
+header, 
+footer {
+  padding:100px;
 }
 
-.App-intro {
-  font-size: large;
+header {
+  display: flex;
+  position: absolute;
+  justify-content: space-between;
+  width: 100%;
+  box-sizing: border-box;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+footer {
+  position: absolute;
+  bottom: 0;
+}
+
+.footer-links ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-links ul li {
+  display: inline-block;
+}
+
+.footer-links ul li a {
+  margin: 0 10px 0 0;
+}
+
+.footer-links ul li a.github:hover {
+  border-bottom: 4px solid #2b3137;
+}
+
+.footer-links ul li a.linkedin:hover {
+  border-bottom: 4px solid #0077B5;
+}
+
+.menu > span {
+  display: block;
+  width: 30px;
+  height: 2px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #cdcdcd;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+span.hello {
+  background: rgb(235, 235, 235);
+  color: #333;;
+  padding: 5px;
+}
+
+.menu span.short {
+  width: 15px;
+}
+
+.content {
+  display: flex;
+  height: 100vh;
+}
+
+.left {
+  width: 50%;
+  align-self: center;
+  padding: 100px;
+}
+
+.right {
+  width: 50%;
+  background: rgb(243, 240, 240);
+  height: 100vh;
+}
+
+h1 {
+  color: #b8b8b8;
+}
+
+strong {
+  color: #333;
 }
