add more content on home page

--- a/src/App.css
+++ b/src/App.css
@@ -167,6 +167,11 @@ strong {
   font-weight: 500;
 }
 
+.about {
+  font-size: 13px;
+  font-family: 'Montserrat', sans-serif;
+}
+
 .thelius {
   font-size: 13px;
   font-family: 'Montserrat', sans-serif;
