--- a/src/App.css
+++ b/src/App.css
@@ -283,3 +283,49 @@ input {
 .table-outer-wrapper {
   overflow-x: scroll;
 }
+
+
+/* Media Queries */
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  h1 {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 767px) {
+  header,
+  footer,
+  .aside-modal {
+    padding: 30px;
+  }
+
+  h1 {
+    font-size: 18px;
+  }
+
+  .content {
+    flex-direction: column
+  }
+
+  .left {
+    padding: 30px;
+    width: 100%;
+  }
+
+  .project .left h1 {
+    width: 100%;
+  }
+
+  .right {
+    width: 100%;
+  }
+
+  .aside-modal {
+    height: 30%;
+  }
+
+  ul.menu-links li a {
+    font-size: 20px;
+  }
+}
